plugin/src/test/resources/annotator/perl/unreachableCode/givenWhenContinue.code
sub test(){
  my $var = 'test';
  given($var){
      'before';
      when('test'){
          'first';
          continue;
          '<error descr="Unreachable code">first2</error>';
      }
      'after';
  }
  'end';
}